# SH-3DScaner

./: .gitmodules  README.md
app/: build.gradle
app/src/androidTest/java/com/example/sh3dscaner/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  ImageProcess.cpp  ImageProcess.h  OptFlow.cpp  OptFlow.h  native-lib.cpp  optflow_FFT.cpp  optflow_FFT.h
app/src/main/java/com/example/sh3dscaner/: AutoFitTextureView.java  Camera2BasicFragment.java  ImageProcess.java  MainActivity.java  OpenCVTest.java
app/src/main/res/layout/: activity_main.xml  fragment_camera2_basic.xml  opencv_test.xml
app/src/main/res/values/: colors.xml  strings.xml
app/src/test/java/com/example/sh3dscaner/: ExampleUnitTest.java
